--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.13",
+    "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
+    "@radix-ui/react-popover": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.1",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.1.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
