--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@supabase/auth-helpers-nextjs": "^0.5.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.1.0",
+    "@tanstack/react-query": "^4.16.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "keen-slider": "^6.8.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
